--- a/sub3suite/res/themes/dark.css
+++ b/sub3suite/res/themes/dark.css
@@ -2,6 +2,10 @@ QWidget {
     outline: 0;
 }
 
+*[default_color="true"] {
+    color: rgb(185, 185, 145);
+}
+
 QComboBox {
     border-style: outset;
     border-style: solid;
@@ -56,11 +60,12 @@ QToolBox QWidget {
 }
 
 QToolBox::tab {
-    color: rgb(250,250,250);
+    padding-left: 12px;
+    color: white;
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(37, 37, 37, 255), stop:1 rgba(57, 57, 57, 255));
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(25,25,25);
+    border-color: rgb(20,20,20);;
 }
 
 QToolBox::tab:hover {
@@ -68,8 +73,8 @@ QToolBox::tab:hover {
 }
 
 QToolBox::tab:selected {
-    background-color: rgba(130,130,130,100);
-    color: rgb(25,25,25);
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(37, 37, 37, 255), stop:1 rgba(47, 47, 47, 255));
+    color: white;
 }
 
 QScrollBar:horizontal {
@@ -259,19 +264,14 @@ QFrame[frameShape="5"] {
     background: transparent;
 }
 
-QFrame#frame {
+QFrame[dark="true"] {
     height: 45px;
     max-height: 45px;
     min-height: 45px;
     background-color: rgb(40, 40, 40);
 }
 
-QLabel#labelResultsCount,
-QLabel#label_level,
-QLabel#labelResultsCountTree,
-QLabel#labelResultsCountJson,
-QLabel#labelCount,
-QLabel#labelResultsCountSRV {
+QLabel[dark="true"] {
     border-style: outset;
     border-style: solid;
     border-width: 1px;
@@ -319,6 +319,7 @@ QSplitter::handle:vertical:hover {
 }
 
 QListView:!read-only,
+QTreeView:!disabled,
 QTextEdit,
 QListWidget,
 QTableView,
