--- a/sub3suite/src/Dialogs/FailedScansDialog.ui
+++ b/sub3suite/src/Dialogs/FailedScansDialog.ui
@@ -57,6 +57,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QPushButton" name="buttonCopy">
+       <property name="text">
+        <string>Copy</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
