refining the project actions

--- a/sub3suite/res.qrc
+++ b/sub3suite/res.qrc
@@ -17,6 +17,7 @@
         <file>res/icons/s3s_logo.ico</file>
         <file>res/icons/splash.png</file>
         <file>res/icons/help.png</file>
+        <file>res/icons/setting.png</file>
     </qresource>
     <qresource prefix="/files">
         <file>res/files/srv.txt</file>
