--- a/sub3suite/res/themes/dark.css
+++ b/sub3suite/res/themes/dark.css
@@ -598,3 +598,8 @@ QRadioButton:hover {
 *::item[no_item_border="true"]{
     border-width: 0px;
 }
+
+QListView:disabled,
+QTreeView:disabled {
+    color: grey;
+}
