--- a/sub3suite/src/project/Project.ui
+++ b/sub3suite/src/project/Project.ui
@@ -228,8 +228,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>165</width>
-         <height>423</height>
+         <width>162</width>
+         <height>440</height>
         </rect>
        </property>
        <attribute name="label">
@@ -381,14 +381,32 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_6">
            <property name="leftMargin">
-            <number>4</number>
+            <number>0</number>
            </property>
            <property name="rightMargin">
-            <number>4</number>
+            <number>0</number>
            </property>
            <property name="bottomMargin">
             <number>4</number>
            </property>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_6">
+             <item>
+              <widget class="QLabel" name="label_5">
+               <property name="text">
+                <string>Save Project:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="buttonSaveProject">
+               <property name="text">
+                <string>  Save... </string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
            <item>
             <spacer name="verticalSpacer">
              <property name="orientation">
